fix thing on mobile

--- a/website/assets/styles.css
+++ b/website/assets/styles.css
@@ -135,7 +135,7 @@ h1 {
   background-color: var(--background-dark);
   padding: 2rem;
   margin: -1rem -1rem 0 -1rem;
-  height: calc(100vh - 4rem);
+  min-height: calc(100vh - 4rem);
   gap: 2rem;
   place-items: center;
   box-sizing: border-box;
@@ -420,6 +420,7 @@ footer {
     flex-direction: row;
     padding: 4rem;
     box-sizing: border-box;
+    height: calc(100vh - 4rem);
     margin: -2rem -2rem 0 -2rem;
   }
 
